--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,61 @@
 }
 
 body {
+  margin: 0;
   font-family: 'Gowun Dodum', sans-serif;
-  background-color: #f5f5f5;
-  color: #333;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* 각 페이지별 배경색 설정 */
+.home-page {
+  background-color: #f0f7ff;  /* 연한 하늘색 */
+  min-height: 100vh;  /* 전체 높이로 변경 */
+  width: 100%;
+  position: absolute;  /* 추가 */
+  top: 0;  /* 추가 */
+  left: 0;  /* 추가 */
+  z-index: -1;  /* 추가: 내용물 뒤에 위치하도록 */
+}
+
+.learning-page {
+  background-color: #fff5f5;  /* 연한 분홍색 */
+  min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.messages-page {
+  background-color: #f0fff4;  /* 연한 민트색 */
+  min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.statistics-page {
+  background-color: #fff8f0;  /* 연한 주황색 */
+  min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.settings-page {
+  background-color: #f5f0ff;  /* 연한 보라색 */
+  min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 h1, h2, h3, h4, h5, h6 {
