--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -12,6 +12,8 @@
   position: relative;
   z-index: 1;
   background: transparent;
+  display: flex;
+  flex-direction: column;
 }
 
 /* 필요한 경우 추가 스타일 */ 
